[gd_scene load_steps=4 format=3 uid="uid://okjgpq0fdnxh"]

[ext_resource type="Script" uid="uid://66jwm822hw6j" path="res://scripts/game/character_modules/crouch_component.gd" id="1_7x3he"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x3he"]
size = Vector2(4, 8.47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4my5o"]
size = Vector2(4, 2)

[node name="CrouchComponent" type="Node2D"]
script = ExtResource("1_7x3he")
metadata/_custom_type_script = "uid://66jwm822hw6j"

[node name="CrouchArea1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
collision_priority = 2.0
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrouchArea1"]
position = Vector2(0, -0.115)
scale = Vector2(0.817, 0.846)
shape = SubResource("RectangleShape2D_7x3he")

[node name="CrouchArea2" type="Area2D" parent="."]
scale = Vector2(0.823848, 0.953239)
collision_layer = 0
collision_mask = 2
collision_priority = 2.0
priority = 2

[node name="Hitbox" type="CollisionShape2D" parent="CrouchArea2"]
position = Vector2(0, 4.265)
scale = Vector2(0.945, 0.7)
shape = SubResource("RectangleShape2D_4my5o")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="RayCast2D" type="RayCast2D" parent="Node2D"]
scale = Vector2(0.15, 0.15)
target_position = Vector2(0, -50.347)
collision_mask = 2
hit_from_inside = true
